--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,8 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 	<item
 		android:id="@+id/menu_schedule"
+		android:icon="@drawable/icon_schedule"
 		android:title="@string/schedule"/>
 	<item
 		android:id="@+id/menu_invoice"
+		android:icon="@drawable/icon_invoice"
 		android:title="@string/invoice"/>
 </menu>
