--- a/app/src/main/res/layout/item_schedule.xml
+++ b/app/src/main/res/layout/item_schedule.xml
@@ -1,16 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			  android:orientation="horizontal"
+			  xmlns:tools="http://schemas.android.com/tools"
 			  android:layout_width="match_parent"
-			  android:layout_height="wrap_content">
-	<TextView
-		android:id="@+id/dateText"
-		android:layout_width="wrap_content"
+			  android:layout_height="wrap_content"
+			  android:background="?attr/selectableItemBackground"
+			  android:clickable="true"
+			  android:focusable="true"
+			  android:gravity="center_vertical"
+			  android:orientation="horizontal"
+			  android:padding="4dp">
+
+	<LinearLayout
+		android:layout_width="45dp"
 		android:layout_height="wrap_content"
-		android:text="Date "/>
-	<TextView
-		android:id="@+id/studentNameText"
-		android:layout_width="wrap_content"
+		android:layout_marginRight="8dp"
+		android:gravity="center"
+		android:orientation="vertical">
+
+		<TextView
+			android:id="@+id/dayOfWeekText"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:textSize="13sp"
+			tools:text="Thurs"/>
+
+		<TextView
+			android:id="@+id/dateText"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:textSize="13sp"
+			tools:text="Oct 21"/>
+
+	</LinearLayout>
+
+	<LinearLayout
+		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:text="Student Name"/>
+		android:orientation="vertical">
+
+		<TextView
+			android:id="@+id/timeText"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:textSize="20sp"
+			tools:text="03:00 PM"/>
+
+		<TextView
+			android:id="@+id/studentNameText"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:textSize="14sp"
+			tools:text="Student Name"/>
+
+	</LinearLayout>
 </LinearLayout>
