--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -12,4 +12,8 @@
 		android:id="@+id/menu_invoice"
 		android:icon="@drawable/icon_invoice"
 		android:title="@string/invoice"/>
+	<item
+		android:id="@+id/menu_options"
+		android:icon="@drawable/icon_settings"
+		android:title="@string/options"/>
 </menu>
