--- a/app/src/main/res/layout/item_schedule.xml
+++ b/app/src/main/res/layout/item_schedule.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			  xmlns:tools="http://schemas.android.com/tools"
-			  android:layout_width="match_parent"
-			  android:layout_height="wrap_content"
-			  android:background="?attr/selectableItemBackground"
-			  android:clickable="true"
-			  android:focusable="true"
-			  android:gravity="center_vertical"
-			  android:orientation="horizontal"
-			  android:padding="4dp">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+				xmlns:tools="http://schemas.android.com/tools"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:background="?attr/selectableItemBackground"
+				android:clickable="true"
+				android:focusable="true"
+				android:gravity="center_vertical"
+				android:orientation="horizontal"
+				android:padding="4dp">
 
 	<LinearLayout
+		android:id="@+id/dateLayout"
 		android:layout_width="45dp"
 		android:layout_height="wrap_content"
 		android:layout_marginRight="8dp"
@@ -34,8 +35,10 @@
 	</LinearLayout>
 
 	<LinearLayout
+		android:id="@+id/hourLayout"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
+		android:layout_toRightOf="@id/dateLayout"
 		android:orientation="vertical">
 
 		<TextView
@@ -53,4 +56,13 @@
 			tools:text="Student Name"/>
 
 	</LinearLayout>
-</LinearLayout>
+
+	<TextView
+		android:id="@+id/hoursLeft"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_alignParentRight="true"
+		android:textColor="@color/colorAccent"
+		android:textSize="14sp"
+		tools:text="4h left"/>
+</RelativeLayout>
