--- a/app/src/main/res/layout/fragment_new_class.xml
+++ b/app/src/main/res/layout/fragment_new_class.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<android.support.v7.widget.CardView
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent"
+	android:layout_height="wrap_content"
+	android:layout_gravity="center"
 	android:paddingLeft="8dp"
 	android:paddingRight="8dp"
 	android:paddingTop="8dp">
@@ -10,7 +12,6 @@
 	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
-					android:layout_gravity="center"
 					android:orientation="vertical">
 
 		<EditText
@@ -64,11 +65,27 @@
 			android:textAlignment="textEnd"
 			android:textSize="24sp"/>
 
+		<com.google.android.flexbox.FlexboxLayout
+			android:id="@+id/classTypeLayout"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_below="@id/classTimeLabel"
+			app:flexWrap="wrap">
+
+			<TextView
+				android:id="@+id/editLabel"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:padding="3dp"
+				android:text="@string/edit"
+				android:textColor="@color/colorPrimary"/>
+		</com.google.android.flexbox.FlexboxLayout>
+
 		<EditText
 			android:id="@+id/notesEdit"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:layout_below="@id/classTimeLabel"
+			android:layout_below="@id/classTypeLayout"
 			android:layout_marginBottom="16dp"
 			android:gravity="top"
 			android:hint="@string/notes_about_class"
@@ -83,4 +100,4 @@
 			android:text="@string/create_class"/>
 
 	</RelativeLayout>
-</ScrollView>
+</android.support.v7.widget.CardView>
