--- a/app/src/main/res/layout/item_new_class_type.xml
+++ b/app/src/main/res/layout/item_new_class_type.xml
@@ -5,7 +5,10 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	android:layout_marginBottom="1dp">
+	android:layout_marginBottom="1dp"
+	android:background="?attr/selectableItemBackground"
+	android:clickable="true"
+	android:focusable="true">
 
 	<android.support.constraint.ConstraintLayout
 		xmlns:android="http://schemas.android.com/apk/res/android"
@@ -29,7 +32,7 @@
 			android:id="@+id/rateLabel"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:text="Rate:"
+			android:text="@string/rate"
 			app:layout_constraintBottom_toBottomOf="@+id/rateValue"
 			app:layout_constraintEnd_toEndOf="@id/lengthLabel"
 			app:layout_constraintTop_toTopOf="@+id/rateValue"/>
@@ -47,7 +50,7 @@
 			android:id="@+id/lengthLabel"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:text="Length:"
+			android:text="@string/length"
 			app:layout_constraintBottom_toBottomOf="@+id/lengthValue"
 			app:layout_constraintStart_toEndOf="@id/name"
 			app:layout_constraintTop_toTopOf="@+id/lengthValue"/>
@@ -64,11 +67,11 @@
 			tools:text="40 min"/>
 
 		<Switch
-			app:layout_constraintTop_toTopOf="parent"
-			app:layout_constraintBottom_toBottomOf="parent"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			app:layout_constraintEnd_toEndOf="parent"/>
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintTop_toTopOf="parent"/>
 
 	</android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
