--- a/app/src/main/res/layout/item_new_class_type.xml
+++ b/app/src/main/res/layout/item_new_class_type.xml
@@ -67,6 +67,7 @@
 			tools:text="40 min"/>
 
 		<Switch
+			android:id="@+id/enabledSwitch"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			app:layout_constraintBottom_toBottomOf="parent"
