--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -4,6 +4,14 @@
 				android:layout_height="match_parent"
 				android:orientation="vertical">
 
+	<TextView
+		android:id="@+id/emptyText"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:gravity="center"
+		android:text="@string/no_scheduled_classes"
+		android:textSize="30sp"/>
+
 	<android.support.v7.widget.RecyclerView
 		android:id="@+id/recyclerView"
 		android:layout_width="match_parent"
