--- a/app/src/main/res/layout/item_new_class_type.xml
+++ b/app/src/main/res/layout/item_new_class_type.xml
@@ -5,17 +5,17 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	android:layout_marginBottom="1dp"
-	android:background="?attr/selectableItemBackground"
-	android:clickable="true"
-	android:focusable="true">
+	android:layout_marginBottom="1dp">
 
 	<android.support.constraint.ConstraintLayout
 		xmlns:android="http://schemas.android.com/apk/res/android"
 		xmlns:app="http://schemas.android.com/apk/res-auto"
 		xmlns:tools="http://schemas.android.com/tools"
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content">
+		android:layout_height="wrap_content"
+		android:background="?attr/selectableItemBackground"
+		android:clickable="true"
+		android:focusable="true">
 
 		<TextView
 			android:id="@+id/name"
