--- a/app/src/main/res/layout/item_schedule.xml
+++ b/app/src/main/res/layout/item_schedule.xml
@@ -4,14 +4,15 @@
 									android:layout_width="match_parent"
 									android:layout_height="wrap_content">
 
-	<RelativeLayout android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:background="?attr/selectableItemBackground"
-					android:clickable="true"
-					android:focusable="true"
-					android:gravity="center_vertical"
-					android:orientation="horizontal"
-					android:padding="4dp">
+	<RelativeLayout
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:background="?attr/selectableItemBackground"
+		android:clickable="true"
+		android:focusable="true"
+		android:gravity="center_vertical"
+		android:orientation="horizontal"
+		android:padding="4dp">
 
 		<LinearLayout
 			android:id="@+id/dateLayout"
