--- a/app/src/main/res/layout/fragment_new_class.xml
+++ b/app/src/main/res/layout/fragment_new_class.xml
@@ -89,8 +89,7 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_below="@id/classTypesLabel"
-			app:alignContent="center"
-			app:alignItems="center"
+			app:justifyContent="center"
 			app:flexWrap="wrap">
 
 		</com.google.android.flexbox.FlexboxLayout>
