--- a/app/src/main/res/layout/item_my_classes.xml
+++ b/app/src/main/res/layout/item_my_classes.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
 									xmlns:tools="http://schemas.android.com/tools"
-									android:layout_margin="1dp"
+									android:layout_marginLeft="1dp"
+									android:layout_marginRight="1dp"
+									android:layout_marginTop="1dp"
 									android:layout_width="match_parent"
 									android:layout_height="wrap_content">
 
