--- a/app/src/main/res/layout/item_student.xml
+++ b/app/src/main/res/layout/item_student.xml
@@ -4,13 +4,14 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	android:padding="5dp">
+	android:padding="10dp">
 
 	<TextView
 		android:id="@+id/studentNameText"
-		android:layout_width="wrap_content"
+		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:textSize="20sp"
+		android:textAlignment="center"
+		android:textSize="24sp"
 		tools:text="Student's Name"/>
 
 </android.support.constraint.ConstraintLayout>
