--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.design.widget.CoordinatorLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
@@ -7,16 +7,21 @@
 	android:layout_height="match_parent"
 	tools:context="ch.ralena.aeonlineschedule.MainActivity">
 
-	<FrameLayout
-		android:id="@+id/fragmentContainer"
+	<RelativeLayout
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:layout_above="@+id/navigationView"/>
+		android:layout_height="match_parent">
 
-	<android.support.design.widget.BottomNavigationView
-		android:id="@+id/navigationView"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:layout_alignParentBottom="true"
-		app:menu="@menu/main"/>
-</RelativeLayout>
+		<FrameLayout
+			android:id="@+id/fragmentContainer"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:layout_above="@+id/navigationView"/>
+
+		<android.support.design.widget.BottomNavigationView
+			android:id="@+id/navigationView"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_alignParentBottom="true"
+			app:menu="@menu/main"/>
+	</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
