--- a/app/src/main/res/layout/fragment_class_detail.xml
+++ b/app/src/main/res/layout/fragment_class_detail.xml
@@ -43,6 +43,7 @@
 		android:layout_height="wrap_content"
 		android:layout_marginEnd="8dp"
 		android:layout_marginStart="8dp"
+		android:textAlignment="center"
 		android:textSize="16sp"
 		tools:text="Some notes before the class."/>
 
@@ -61,6 +62,7 @@
 		android:layout_height="wrap_content"
 		android:layout_marginEnd="8dp"
 		android:layout_marginStart="8dp"
+		android:textAlignment="center"
 		android:textSize="16sp"
 		tools:text="An after-class summary of the class."/>
 
@@ -72,8 +74,17 @@
 		android:layout_marginRight="40dp"
 		android:layout_marginTop="5dp"
 		android:background="@color/colorPrimary"/>
+
 	<android.support.v7.widget.RecyclerView
 		android:id="@+id/classRecyclerView"
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"/>
+		android:layout_height="wrap_content"
+		android:layout_weight="1"/>
+
+	<Button
+		android:id="@+id/deleteButton"
+		style="@style/Base.Widget.AppCompat.Button.Colored"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:text="@string/delete_class"/>
 </LinearLayout>
