--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+				xmlns:app="http://schemas.android.com/apk/res-auto"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
 				android:orientation="vertical">
@@ -31,6 +32,7 @@
 		android:layout_alignParentRight="true"
 		android:layout_margin="16dp"
 		android:src="@drawable/ic_add"
-		android:tint="@android:color/white"/>
+		android:tint="@android:color/white"
+		app:layout_behavior="com.support.android.designlibdemo.ScrollAwareFABBehavior"/>
 
 </RelativeLayout>
