--- a/app/src/main/res/layout/fragment_new_class.xml
+++ b/app/src/main/res/layout/fragment_new_class.xml
@@ -65,11 +65,11 @@
 			android:id="@+id/classTypesLabel"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_below="@id/classTimeValue"
-			android:text="@string/class_types"
-			android:gravity="center"
-			android:layout_alignTop="@id/editLabel"
 			android:layout_alignBottom="@id/editLabel"
+			android:layout_alignTop="@id/editLabel"
+			android:layout_below="@id/classTimeValue"
+			android:gravity="center"
+			android:text="@string/class_types"
 			android:textSize="14sp"/>
 
 		<TextView
@@ -77,9 +77,9 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_below="@id/classTimeValue"
+			android:layout_toEndOf="@id/classTypesLabel"
 			android:paddingLeft="12dp"
 			android:paddingRight="12dp"
-			android:layout_toEndOf="@id/classTypesLabel"
 			android:text="@string/edit"
 			android:textColor="@color/colorPrimary"
 			android:textSize="16sp"/>
@@ -89,8 +89,8 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_below="@id/classTypesLabel"
-			app:justifyContent="center"
-			app:flexWrap="wrap">
+			app:flexWrap="wrap"
+			app:justifyContent="center">
 
 		</com.google.android.flexbox.FlexboxLayout>
 
