--- a/app/src/main/res/layout/fragment_class_detail.xml
+++ b/app/src/main/res/layout/fragment_class_detail.xml
@@ -16,6 +16,7 @@
 		android:layout_marginTop="8dp"
 		android:textAlignment="center"
 		android:textSize="20sp"
+		android:transitionName="student_name_transition"
 		tools:text="Student name"/>
 
 	<TextView
