--- a/app/src/main/res/layout/item_new_class_type.xml
+++ b/app/src/main/res/layout/item_new_class_type.xml
@@ -23,7 +23,7 @@
 			android:layout_height="wrap_content"
 			android:layout_marginStart="8dp"
 			android:textSize="24sp"
-			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintBottom_toBottomOf="@id/lengthValue"
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintTop_toTopOf="parent"
 			tools:text="TOEFL"/>
@@ -74,5 +74,21 @@
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintTop_toTopOf="parent"/>
 
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:orientation="vertical"
+			app:layout_constraintTop_toBottomOf="@id/lengthValue">
+
+			<TextView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="@string/rate"/>
+
+			<EditText
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:inputType="numberDecimal"/>
+		</LinearLayout>
 	</android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
