--- a/app/src/main/res/layout/item_new_class_type.xml
+++ b/app/src/main/res/layout/item_new_class_type.xml
@@ -22,6 +22,7 @@
 			android:layout_width="85dp"
 			android:layout_height="wrap_content"
 			android:layout_marginStart="8dp"
+			android:layout_marginTop="8dp"
 			android:textSize="24sp"
 			app:layout_constraintBottom_toBottomOf="@id/lengthValue"
 			app:layout_constraintStart_toStartOf="parent"
@@ -74,21 +75,5 @@
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintTop_toTopOf="parent"/>
 
-		<LinearLayout
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:orientation="vertical"
-			app:layout_constraintTop_toBottomOf="@id/lengthValue">
-
-			<TextView
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:text="@string/rate"/>
-
-			<EditText
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:inputType="numberDecimal"/>
-		</LinearLayout>
 	</android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
