--- a/app/src/main/res/layout/fragment_class_detail.xml
+++ b/app/src/main/res/layout/fragment_class_detail.xml
@@ -7,25 +7,35 @@
 	android:layout_height="match_parent"
 	android:orientation="vertical">
 
-	<TextView
-		android:id="@+id/studentNameLabel"
+	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_marginEnd="8dp"
-		android:layout_marginStart="8dp"
-		android:layout_marginTop="8dp"
-		android:textAlignment="center"
-		android:textSize="22sp"
-		android:transitionName="student_name_transition"
-		tools:text="Student name"/>
+		android:gravity="center"
+		android:orientation="horizontal">
 
-	<TextView
-		android:id="@+id/classTypeAndPriceLabel"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:textAlignment="center"
-		android:textSize="20sp"
-		tools:text="GE - $17"/>
+		<TextView
+			android:id="@+id/studentNameLabel"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:textAlignment="center"
+			android:textSize="22sp"
+			android:transitionName="student_name_transition"
+			tools:text="Student name"/>
+
+		<TextView
+			android:textSize="20sp"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text=" - "/>
+
+		<TextView
+			android:id="@+id/classTypeAndPriceLabel"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:textAlignment="center"
+			android:textSize="18sp"
+			tools:text="GE - $17"/>
+	</LinearLayout>
 
 	<TextView
 		android:id="@+id/classTimeLabel"
