Can click on other classes in Class Detail Fragment to load their information.

--- a/app/src/main/res/layout/fragment_class_detail.xml
+++ b/app/src/main/res/layout/fragment_class_detail.xml
@@ -97,7 +97,7 @@
 	<TextView
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:text="@string/all_student_classes"
+		android:text="@string/past_classes"
 		android:textAlignment="center"
 		android:textSize="20sp"/>
 
