--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
 	<color name="colorPrimaryDark">#303F9F</color>
 	<color name="colorAccent">#FF4081</color>
 	<color name="colorText">#212121</color>
+	<color name="colorTextLight">#757575</color>
 	<color name="colorGreen">#388E3C</color>
 	<color name="colorGray">#9E9E9E</color>
 </resources>
