--- a/app/src/main/res/layout/fragment_edit_student.xml
+++ b/app/src/main/res/layout/fragment_edit_student.xml
@@ -6,54 +6,68 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
 
-	<LinearLayout
+	<android.support.v7.widget.CardView
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:orientation="vertical"
+		android:layout_margin="4dp"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent">
 
-		<EditText
-			android:id="@+id/studentNameEdit"
+		<LinearLayout
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:hint="@string/english_name"/>
+			android:orientation="vertical"
+			android:padding="4dp">
 
-		<EditText
-			android:id="@+id/studentNameChineseEdit"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:hint="@string/chinese_name"/>
+			<EditText
+				android:id="@+id/studentNameEdit"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:hint="@string/english_name"/>
 
-		<EditText
-			android:id="@+id/homeTownEdit"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:hint="@string/home_town"/>
+			<EditText
+				android:id="@+id/studentNameChineseEdit"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:hint="@string/chinese_name"/>
 
-		<EditText
-			android:id="@+id/currentTownEdit"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:hint="@string/current_location"/>
+			<EditText
+				android:id="@+id/homeTownEdit"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:hint="@string/home_town"/>
 
-		<EditText
-			android:id="@+id/notesEdit"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:hint="@string/notes"/>
+			<EditText
+				android:id="@+id/currentTownEdit"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:hint="@string/current_location"/>
 
-		<TextView
-			android:textStyle="italic"
-			android:id="@+id/defaultClassTypeText"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:textColor="@color/colorTextLight"
-			android:textSize="18sp"
-			android:padding="4dp"
-			tools:text="General English"/>
+			<EditText
+				android:id="@+id/notesEdit"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:hint="@string/notes"/>
 
-	</LinearLayout>
+			<TextView
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:text="@string/default_class_type"
+				android:textColor="@color/colorTextLight"
+				android:textSize="12sp"/>
+
+			<TextView
+				android:id="@+id/defaultClassTypeText"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:hint="@string/click_to_select"
+				android:padding="4dp"
+				android:textColor="@color/colorTextLight"
+				android:textSize="18sp"
+				android:textStyle="italic"/>
+
+		</LinearLayout>
+	</android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
