--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -6,6 +6,12 @@
 		<item>+2 days</item>
 		<item>+3 days</item>
 	</string-array>
+	<string-array name="default_day_values">
+		<item>0</item>
+		<item>1</item>
+		<item>2</item>
+		<item>3</item>
+	</string-array>
 	<string-array name="default_hour">
 		<item>0:00 AM</item>
 		<item>1:00 AM</item>
@@ -31,6 +37,32 @@
 		<item>21:00 PM</item>
 		<item>22:00 PM</item>
 		<item>23:00 PM</item>
+	</string-array>
+	<string-array name="default_hour_values">
+		<item>0</item>
+		<item>1</item>
+		<item>2</item>
+		<item>3</item>
+		<item>4</item>
+		<item>5</item>
+		<item>6</item>
+		<item>7</item>
+		<item>8</item>
+		<item>9</item>
+		<item>10</item>
+		<item>11</item>
+		<item>12</item>
+		<item>13</item>
+		<item>14</item>
+		<item>15</item>
+		<item>16</item>
+		<item>17</item>
+		<item>18</item>
+		<item>19</item>
+		<item>20</item>
+		<item>21</item>
+		<item>22</item>
+		<item>23</item>
 	</string-array>
 	<string-array name="time_in_advance">
 		<item>0 minutes</item>
